# StarkGit

./: .gitignore  .gitmodules  package-lock.json  package.json  pyproject.toml
audit/: __init__.py  __main__.py  analysis.py  example.json  repo.py
docs/: README.md  WT.md
starkgit/: LICENSE  README.md  package-lock.json  package.json
starkgit/src/: index.ts
